# codescope

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/codescope-cli/: Cargo.toml
crates/codescope-cli/src/: main.rs
crates/codescope-cli/src/commands/: agent_setup.rs  clean.rs  daemon.rs  errors.rs  index.rs  init.rs  mod.rs  search.rs  status.rs  trace.rs  util.rs  watch.rs
crates/codescope-cli/src/services/: index_service.rs  mod.rs  scheduler.rs
crates/codescope-cli/tests/: test_agent_setup.rs  test_chunking.rs  test_cli.rs  test_search.rs  test_trace.rs
crates/codescope-cli/tests/fixtures/python/: sample.py
crates/codescope-cli/tests/fixtures/rust/: sample.rs
crates/codescope-cli/tests/fixtures/typescript/: sample.ts
crates/codescope-core/: Cargo.toml
crates/codescope-core/src/: call_graph.rs  change_detector.rs  config.rs  embedding.rs  error.rs  file_reader.rs  lib.rs  lock.rs  memory.rs  profile.rs  project.rs  walker.rs
crates/codescope-embed/: Cargo.toml
crates/codescope-embed/examples/: embed_smoke.rs
crates/codescope-embed/src/: download.rs  embedder.rs  error.rs  lib.rs  onnx.rs  pipeline.rs  preprocess.rs  provider.rs  registry.rs  tokenizer.rs
crates/codescope-parser/: Cargo.toml
crates/codescope-parser/benches/: parser_bench.rs
crates/codescope-parser/src/: call_site.rs  chunk.rs  error.rs  import.rs  language.rs  lib.rs  parser.rs
crates/codescope-search/: Cargo.toml
crates/codescope-search/benches/: search_bench.rs
crates/codescope-search/examples/: hnsw_smoke.rs  search_smoke.rs
crates/codescope-search/src/: bm25.rs  dedupe.rs  engine.rs  error.rs  fusion.rs  hnsw.rs  lib.rs  rerank.rs  result.rs  storage.rs
docs/: amelioration.md  audit-architecture.md  cli.md  corrections.md  etude-vector-store.md  etude-x10.md
docs/plan/: README.md  epic-01-scaffolding.md  epic-02-file-walker.md  epic-03-parser.md  epic-04-storage.md  epic-05-embedding.md  epic-06-search.md  epic-07-cli.md  epic-08-perf.md  epic-09-distribution.md  epic-10-daemon.md  epic-11-text-docs.md  epic-12-ocr-and-binary-docs.md  epic-13-external-embedding-providers.md  epic-14-postgres-pgvector.md  epic-15-token-optimization.md  epic-16-call-graph.md  epic-17-qdrant.md  epic-17-vector-store.md
tests/comparison/: COMPARISON.md  token_test.py
tests/comparison/fake-project/src/models/: user.ts
tests/comparison/fake-project/src/services/: auth_service.ts  user_service.ts
tests/comparison/fake-project/src/utils/: database.ts
