[workspace]
resolver = "2"
members = [
    "crates/codescope-cli",
    "crates/codescope-core",
    "crates/codescope-parser",
    "crates/codescope-embed",
    "crates/codescope-search",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["codescope contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Achille-G/codescope"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
codescope-core = { path = "crates/codescope-core" }
codescope-parser = { path = "crates/codescope-parser" }
codescope-embed = { path = "crates/codescope-embed" }
codescope-search = { path = "crates/codescope-search" }

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Search
tantivy = "0.22"

# File walking
ignore = "0.4"
walkdir = "2"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embeddings (ONNX) - require Rust 1.85+ for edition2024 support
ort = "2.0.0-rc.11"
# Disable default features: `esaxx_fast` pulls a C++ build that forces `/MT` and
# conflicts with ONNX Runtime (`/MD`) when linking (Windows/MSVC).
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# HNSW
usearch = "2"

# Tree-sitter
tree-sitter = "0.24"

# Misc
rayon = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dirs = "5"

[workspace.dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[workspace.dependencies.tempfile]
version = "3"

[workspace.dependencies.rand]
version = "0.8"

[workspace.dependencies.assert_cmd]
version = "2.0"

[workspace.dependencies.predicates]
version = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
lto = true
codegen-units = 1
