[package]
name = "codescope-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codescope"
path = "src/main.rs"

[dependencies]
codescope-core = { workspace = true }

clap = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
