[package]
name = "codescope-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codescope"
path = "src/main.rs"

[dependencies]
codescope-core = { workspace = true }
codescope-embed = { workspace = true }
codescope-parser = { workspace = true }
codescope-search = { workspace = true }
xxhash-rust = { workspace = true }

clap = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
fs2 = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
ctrlc = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
codescope-parser = { workspace = true }
xxhash-rust = { workspace = true }
