[package]
name = "codescope-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codescope-parser = { workspace = true }
codescope-embed = { workspace = true }
codescope-search = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
tempfile = "3"
