[package]
name = "codescope-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ort = { workspace = true }
tokenizers = { workspace = true }
ndarray = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
