[package]
name = "codescope-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ort = { workspace = true }
tokenizers = { workspace = true }
ndarray = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "stream"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
