[package]
name = "codescope-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tree-sitter = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }

# Tree-sitter grammars (compiled into binary)
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"

[dev-dependencies]
tempfile = "3"
