[package]
name = "codescope-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tantivy = { workspace = true }
usearch = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
tempfile = "3"
